--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,9 +9,10 @@ title: Slides / Nils Löwe
     %tr
       %th Date
       %th Slides
-      %th pdf
   %tbody
     %tr
+      %td 15.03.16
+      %td=link_to '"Swagger" @ Web API Meetup, Hamburg', 'SwaggerAPIMeetup.html'
+    %tr
       %td 11.03.16
-      %td=link_to 'Lightning Talk @ Ruby Bath Conference', 'BathRubyConf2016.html'
-      %td n/a
+      %td=link_to '"The Manifesto for Responsible Software Development": Lightning Talk @ Bath Ruby Conference', 'BathRubyConf2016.html'
