--- a/source/BathRubyConf2016.html.haml
+++ b/source/BathRubyConf2016.html.haml
@@ -4,39 +4,32 @@ layout: slide
 ---
 
 %section{"data-markdown" => ""}
-  \# Page title
+  \## The Manifesto for Responsible Software Development
+  %br
+  \### How to be a #ResponsibleCoder
+  %br
+  http://manifesto.responsiblesoftware.org/
 
-  A paragraph with some text and a [link](http://hakim.se).
+%section{"data-markdown" => ""}
+  \### I am ethically responsible for my decisions and I will act according to my conscience.
+%section{"data-markdown" => ""}
+  \### I will not develop software that is intended to violate human rights and civil liberties.
+%section{"data-markdown" => ""}
+  \### I will be worthy of the faith in me as an expert of my profession.
+%section{"data-markdown" => ""}
+  \### I will collect only the data that is essential for my task. I will store it only as long as needed.
+%section{"data-markdown" => ""}
+  \### I will do my very best to prevent the waste of energy and resources.
+%section{"data-markdown" => ""}
+  \### I make these promises solemnly, freely and upon my honor.
 
-%section
-  %pre
-    %code{"data-noescape" => "", "data-trim" => ""}
-      def lazy-fib
-      (concat
-      [0 1]
-      %mark ((fn rfib [a b]
-      (lazy-cons (+ a b) (rfib b (+ a b)))) 0 1)))
+%section{"data-markdown" => ""}
+  \### Thank you!
 
-%section
-  First Slide
 
-%section
-  Second Slide
-  Blubb
-  Bla
+%section{"data-markdown" => ""}
+  \### Thank you!
 
-%section
-  Second Slide
-  Blubb
-  Bla
-
-%section
-  Second Slide
-  Blubb
-  Bla
-
-%section
-  %ul
-    %li Second Slide
-    %li Blubb
-    %li Bla
+  https://nils-loewe.de
+  %br
+  @NilsLoewe
