--- a/source/BathRubyConf2016.html.haml
+++ b/source/BathRubyConf2016.html.haml
@@ -24,12 +24,17 @@ layout: slide
   \### I make these promises solemnly, freely and upon my honor.
 
 %section{"data-markdown" => ""}
-  \### Thank you!
+  \## Do you want to be a
+  \## #ResponsibleCoder?
+  %br
+  \#### Join us at http://manifesto.responsiblesoftware.org/
 
 
 %section{"data-markdown" => ""}
   \### Thank you!
 
-  https://nils-loewe.de
-  %br
   @NilsLoewe
+  %br
+  https://nils-loewe.de
+
+  \#### http://manifesto.responsiblesoftware.org/
