--- a/source/BathRubyConf2016.html.haml
+++ b/source/BathRubyConf2016.html.haml
@@ -11,6 +11,18 @@ layout: slide
   http://manifesto.responsiblesoftware.org/
 
 %section{"data-markdown" => ""}
+  \### Is our work taking us in the right direction?
+
+%section{"data-markdown" => ""}
+  \### Hippocratic Oath: 500 BC
+  \### The Obligation of the Engineer: 1922
+  \### Software?
+
+%section{"data-markdown" => ""}
+  \### 2015
+  \## The Manifesto for Responsible Software Development
+
+%section{"data-markdown" => ""}
   \### I am ethically responsible for my decisions and I will act according to my conscience.
 %section{"data-markdown" => ""}
   \### I will not develop software that is intended to violate human rights and civil liberties.
