--- a/source/BathRubyConf2016.html.haml
+++ b/source/BathRubyConf2016.html.haml
@@ -11,7 +11,7 @@ layout: slide
   http://manifesto.responsiblesoftware.org/
 
 %section{"data-markdown" => ""}
-  \### Is our work taking us in the right direction?
+  \## Are we taking the world into the right direction?
 
 %section{"data-markdown" => ""}
   \### Hippocratic Oath: 500 BC
