--- a/source/layouts/slide.haml
+++ b/source/layouts/slide.haml
@@ -8,10 +8,10 @@
     %meta{:content => "black-translucent", :name => "apple-mobile-web-app-status-bar-style"}/
     %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui", :name => "viewport"}/
     %link{:href => "css/reveal.css", :rel => "stylesheet"}/
-    %link{:href => "css/ai.css", :rel => "stylesheet"}/
     %link#theme{:href => "css/theme/night.css", :rel => "stylesheet"}/
     / Code syntax highlighting
     %link{:href => "lib/css/zenburn.css", :rel => "stylesheet"}/
+    %link{:href => "css/slides.css", :rel => "stylesheet"}/
     / Printing and PDF exports
     :javascript
       var link = document.createElement( 'link' );
