--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,10 +1,9 @@
 ---
 title: Slides / Nils Löwe
 ---
-%h1 Slides
+%h2 Slides
 
 %table.table.table-striped
-  %caption Slides
   %thead
     %tr
       %th Date
@@ -12,7 +11,7 @@ title: Slides / Nils Löwe
   %tbody
     %tr
       %td 15.03.16
-      %td=link_to '"Swagger" @ Web API Meetup, Hamburg', 'SwaggerAPIMeetup.html'
+      %td=link_to '"Introduction to Swagger" @ Web API Meetup, Hamburg', 'SwaggerAPIMeetup.html'
     %tr
       %td 11.03.16
       %td=link_to '"The Manifesto for Responsible Software Development": Lightning Talk @ Bath Ruby Conference', 'BathRubyConf2016.html'
