--- a/source/SwaggerAPIMeetup.html.haml
+++ b/source/SwaggerAPIMeetup.html.haml
@@ -54,7 +54,59 @@ layout: slide
   ![](/images/oai.png)
 
 %section{"data-markdown" => ""}
-  \### Describing APIs in Swagger
+  \## How to use Swagger?
+
+%section{"data-markdown" => ""}
+  \#### New API: Top-Down
+  * Use the Swagger **Editor** to create your Swagger definition
+  * Use the Swagger **Codegen** tools to generate server implementation
+
+%section{"data-markdown" => ""}
+  \#### Existing API: Bottom-Up
+  * You have an existing REST API
+  * You want to create a Swagger definition
+  * Option A: Create the definition manually using the Swagger Editor
+  * Option B: Integrate the framework into your Code and get the Swagger definition generated automatically
+
+%section{"data-markdown" => ""}
+  \#### Build a new client for a Swagger-described API
+  * Use the online version of the Swagger UI to explore the API
+  * (given that you have a URL to the APIs Swagger definition)
+  * Use Swagger Codegen to generate the client library
+
+%section{"data-markdown" => ""}
+  \## Swagger Tools
+
+%section{"data-markdown" => ""}
+  \#### Swagger-Codegen
+
+  *Generating client libraries and server stubs from a Swagger definition*
+
+  * Required: Java 7, Apache maven > 3.0.3
+  * Available via homebrew, Docker, Vagrant, ...
+  * https://github.com/swagger-api/swagger-codegen
+
+%section{"data-markdown" => ""}
+  \#### Swagger-UI
+
+  *A dependency-free collection of HTML, Javascript, and CSS assets that dynamically generate beautiful documentation and sandbox from a Swagger-compliant API*
+
+  * Works in all common browsers (Chrome, Safari, Firefox, IE8++)
+  * Download from https://github.com/swagger-api/swagger-ui
+
+%section{"data-markdown" => ""}
+  \#### Available Integrations
+
+  *Open Source Implementations available for*
+  %br
+  Clojure, Coldfusion, D, Eiffel, Erlang, Go, Groovy, Haskell, Java, Javascript, TypeScript, .NET, Node.JS, Perl, Python, Php, Ruby, Scala
+  %br
+  *Commercial Implementations available for*
+  %br
+  http://swagger.io/commercial-tools/
+
+%section{"data-markdown" => ""}
+  \### Describing APIs with Swagger
 
 %section
   %h4 A 'hello world' API
@@ -82,3 +134,59 @@ layout: slide
                     type: string
                 400:
                   description: Invalid characters in "user" were provided.
+
+%section
+  %h3 API Info
+  %pre
+    %code
+      :preserve
+        title           string	Required. The title of the application.
+        description     string	A short description of the application.
+        termsOfService	string	The Terms of Service for the API.
+        contact	        Object	The contact information for the exposed API.
+        license	        Object	The license information for the exposed API.
+        version	        string	Required Provides the version of the application API
+
+%section
+  %h3 Data types
+  %pre
+    %code
+      :preserve
+        integer   integer   int32       signed 32 bits
+        long      integer   int64       signed 64 bits
+        float	  number    float
+        double	  number    double
+        string	  string
+        byte	  string    byte	        base64 encoded characters
+        binary	  string    binary      any sequence of octets
+        boolean	  boolean
+        date	  string    date	        As defined by full-date - RFC3339
+        dateTime  string    date-time	As defined by date-time - RFC3339
+        password  string    password	Used to hint UIs the input needs to be obscured.
+
+%section
+  %h3 Schemes
+  %pre
+    %code
+      :preserve
+        swagger	  string	Required. Specifies the Swagger Specification version
+        info	  Info Object	Required. Provides metadata about the API
+        host	  string	The host (name or ip) serving the API
+        basePath  string	The base path on which the API is served, relative to the host
+        schemes   [string]	The transfer protocol: "http", "https", "ws", "wss"
+        consumes  [string]	A list of MIME types the APIs can consume
+        produces  [string]	A list of MIME types the APIs can produce
+        paths	  Paths Object	Required. The available paths and operations for the API.
+        ...
+    %a http://swagger.io/specification/
+
+%section{"data-markdown" => ""}
+  \### Demo Time!
+  http://petstore.swagger.io/
+
+%section{"data-markdown" => ""}
+  \### Thank you!
+  %br
+  https://slides.nils-loewe.de/
+  %br
+  [@NilsLoewe](https://twitter.com/NilsLoewe)
