--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,14 +4,29 @@
     %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no", :name => "viewport"}/
-    = partial :open_graph
 
     / Use title if it's in the page YAML frontmatter
     %title= current_page.data.title
     %link{:href => "//fonts.googleapis.com/css?family=Lato:300,400", :rel => "stylesheet", :type => "text/css"}/
+
+    %link{:href => "css/bootstrap.min.css", :rel => "stylesheet"}
+    %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"}
     = stylesheet_link_tag :all
     = javascript_include_tag :main
-    %link{:href => "css/bootstrap.min.css", :rel => "stylesheet"}
+    = javascript_include_tag "verify.notify.min"
+    :javascript
+      WebFontConfig = {
+        google: { families: [ 'Open+Sans:300,400,700:latin', 'Lato:700,900:latin' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
 
   %body
     = partial :header
@@ -21,6 +36,7 @@
           .boxed.push-down-45
             .row
               .col-xs-12.col-sm-10.col-sm-offset-1
-                = yield
+                .slides-box
+                  = yield
     = partial :footer
     = partial :tracking
