--- a/source/_footer.html.haml
+++ b/source/_footer.html.haml
@@ -23,11 +23,11 @@
         %hr/
         %ul.navigation
           %li
-            %a{:href => "https://nils-loewe.de/impressum.html"} Impressum
+            %a{:href => "https://nils-loewe.de/impressum"} Impressum
           %li
-            %a{:href => "https://nils-loewe.de/datenschutz.html"} Datenschutzerklärung
+            %a{:href => "https://nils-loewe.de/datenschutz"} Datenschutzerklärung
           %li
-            %a{:href => "https://nils-loewe.de/contact.html"} Kontakt
+            %a{:href => "https://nils-loewe.de/contact"} Kontakt
     .col-xs-12.col-md-4.hidden-xs
       .widget-contact.push-down-30
         %h6 Kontakt
