--- a/source/PhantomindsRoadmapping.html.haml
+++ b/source/PhantomindsRoadmapping.html.haml
@@ -82,7 +82,7 @@ layout: slide
 
   * Challenge erstellen
   * Challenge editieren
-  * Phase starten/beenden
+  * Phasen starten/beenden
   * Challenge löschen
 
 %section{"data-markdown" => ""}
@@ -168,18 +168,18 @@ layout: slide
   * Login/Logout
   * Dashboard ansehen: User Score etc.
   * Meine Profilbesucher sehen
-  * Public Profile (Punkte, teilgenommene Challenges, gewonnene Challenges, Ideen, Kommentare)
-  * Ambassador User: Kann Ideen und Kommentare direkt auf der Plattform verwalten
-  * Client User: Kann im Backend für Challenges freigeschaltet werden
+  * Public Profile (Punkte, teilgenommene Challenges, **gewonnene Challenges, Ideen, Kommentare**)
+  * **Ambassador User: Kann Ideen und Kommentare direkt auf der Plattform verwalten**
+  * **Client User: Kann im Backend für Challenges freigeschaltet werden**
 
 %section{"data-markdown" => ""}
 
   \#### IST-Stand der Plattform
   \### User Funktionen (Backend)
 
-  * Liste der User: Sortieren / Filtern nach Rang, Score, Ideen, ...
+  * Liste der User: **Sortieren / Filtern nach Rang, Score, Ideen, ...**
   * User editieren (Name, Email, ...)
-  * User löschen
+  * **User löschen**
   * Rollen zuweisen
 
 %section{"data-markdown" => ""}
@@ -190,18 +190,6 @@ layout: slide
   * Rechtesystem: Rollen definieren und aus einzelnen Rechten zusammensetzen
   * Rechte einzeln verteilen, alternativ Rollen als Shortcut zuweisen
   * User-Umfragen: Mehr Daten sammeln (Interessen etc.) um in Challenges User gezielt anzusprechen
-
-
-%section{"data-markdown" => ""}
-
-  \#### IST-Stand der Plattform
-  \### User Funktionen (Backend)
-
-  * Liste der User
-  * User editieren (Name, Email, ...)
-  * User löschen
-  * Rollen zuweisen
-
 
 %section{"data-markdown" => ""}
 
@@ -297,8 +285,9 @@ layout: slide
   \### "simple" Whitelabel Funktionen
 
   * Alle bestehenenden phantominds-user nehmen teil
-  * Neue User werden später zur community zugefügt
-  * Nur die whitelabel-challenge sichtbar
+  * Neue User existieren zunächst auf der whitelabel-Seite
+  * Neue User werden später zur phantominds community zugefügt
+  * Nur die whitelabel-challenge ist sichtbar
   * Direkter Einstieg in die challenge
   * Mails werden von xyz@phantominds.com gesendet
 
@@ -307,7 +296,7 @@ layout: slide
   \#### ZIEL-Stand der Plattform
   \### "external" Whitelabel Funktionen
 
-  \#### Alle Funktionen der "simple" Lösung, zusätzlich:textile
+  \#### Alle Funktionen der "simple" Lösung, zusätzlich:
 
   * Keine synchronisation der User in irgendeine Richtung
   * Emails laufen über Kunden-Server
