--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -10,6 +10,9 @@ title: Slides / Nils Löwe
       %th Slides
   %tbody
     %tr
+      %td 23.04.16
+      %td=link_to '"The Manifesto for Responsible Software Development": Talk @ JSUnConf Hamburg', 'JSUnConf2016.html'
+    %tr
       %td 15.03.16
       %td=link_to '"Introduction to Swagger" @ Web API Meetup, Hamburg', 'SwaggerAPIMeetup.html'
     %tr
