--- a/source/JSUnConf2016.html.haml
+++ b/source/JSUnConf2016.html.haml
@@ -62,6 +62,11 @@ layout: slide
   Modified motor software detects test systems and reduces power (emssions)
 
 %section{"data-markdown" => ""}
+  \### Ebay Hacked (again)
+
+  "Fun project" enables XSS attacks: http://www.jsfuck.com/
+
+%section{"data-markdown" => ""}
   \## Ok, but why do you tell me?
 
 %section{"data-markdown" => ""}
@@ -75,19 +80,33 @@ layout: slide
 %section{"data-markdown" => ""}
   \### 2015
   \## The Manifesto for Responsible Software Development
+  %br
+  http://manifesto.responsiblesoftware.org/
 
 %section{"data-markdown" => ""}
   \### I am ethically responsible for my decisions and I will act according to my conscience.
+  \#### *The impact of software is growing continuously in all areas of our lives. I acknowledge the consequences to humanity and the environment that evolve from our work.*
+
 %section{"data-markdown" => ""}
   \### I will not develop software that is intended to violate human rights and civil liberties.
+  \#### *It is increasingly possible to violate personal and human rights with the use of software as the boundaries between real and digital world become blurred.*
+  \#### *I know that I can't control software once it is released so I have a responsibility to consider the potential for my software to violate people’s right before I start to implement it. I will reject projects which facilitate this abuse.*
+
 %section{"data-markdown" => ""}
   \### I will be worthy of the faith in me as an expert of my profession.
+  \#### *The possible negative consequences of the improper use of complex software are inconceivable to most users. Therefore it is our responsibility as software developers to communicate the boundaries of proper use clearly.*
+  \#### *When I realize that a software that I released is not applicable anymore, my minimum responsibility is to let potential and existing users know.*
+
 %section{"data-markdown" => ""}
   \### I will collect only the data that is essential for my task. I will store it only as long as needed.
+  \#### *My applications are likely to collect personal information. I will safeguard this, and use it only as the provider of the information intended. I will treat their data as if it were my own.*
+
 %section{"data-markdown" => ""}
   \### I will do my very best to prevent the waste of energy and resources.
+  \#### *The increasing number of devices that contain software has a strong impact on the global use of resources and energy.*
+
 %section{"data-markdown" => ""}
-  \### I make these promises solemnly, freely and upon my honor.
+  \### *I make these promises solemnly, freely and upon my honor.*
 
 %section{"data-markdown" => ""}
   \## Are you a
