HH@work Vortrag

--- a/source/_header.html.haml
+++ b/source/_header.html.haml
@@ -1,9 +1,5 @@
 %header.header.push-down-45
   .container
-    / .logo.pull-left
-    /   %a{:href => "index.html"}
-    /     %img{:alt => "Logo", :src => "images/logo.png"}/
-    / Brand and toggle get grouped for better mobile display
     .navbar-header
       %button.navbar-toggle{"data-target" => "#readable-navbar-collapse", "data-toggle" => "collapse", :type => "button"}
         %span.sr-only Toggle navigation
@@ -11,17 +7,13 @@
         %span.icon-bar
         %span.icon-bar
     %nav.navbar.navbar-default{:role => "navigation"}
-      / Collect the nav links, forms, and other content for toggling
       #readable-navbar-collapse.collapse.navbar-collapse
         %ul.navigation
           %li{:class => ("active" if current_page.path == 'index.html')}
-            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://nils-loewe.de/index.html"} Home
+            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://nils-loewe.de/index.html"} Nils Löwe
           %li{:class => ("active" if current_page.path == 'blog.html')}
-            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://nils-loewe.de/blog.html"} Blog
+            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://nils-loewe.de/blog"} Blog
           %li{:class => ("active" if current_page.path == 'profil.html')}
-            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://nils-loewe.de/profil.html"} Über mich
+            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://lionizers.com"} Lionizers
           %li{:class => ("active" if current_page.path == 'angebot.html')}
-            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://nils-loewe.de/angebot.html"} Arbeite mit mir
-          %li{:class => ("active" if current_page.path == 'contact.html')}
-            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://nils-loewe.de/contact.html"} Kontakt
-      / /.navbar-collapse
+            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://manifesto.responsiblesoftware.org/"} Manifesto for Responsible Software Development
