--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -10,6 +10,9 @@ title: Slides / Nils Löwe
       %th Slides
   %tbody
     %tr
+      %td 07.06.17
+      %td=link_to '"Verantwortung als Softwareentwickler": Vortrag für Hamburg@work', '20170608_Hamburg_at_work-Manifest.html'
+    %tr
       %td 23.04.16
       %td=link_to '"The Manifesto for Responsible Software Development": Talk @ JSUnConf Hamburg', 'JSUnConf2016.html'
     %tr
